REGRESSION: [BigSur] ASSERT NOT REACHED in WebCore::ResourceLoadPriority WebCore::toResourceLoadPriority https://bugs.webkit.org/show_bug.cgi?id=222998

Unreviewed, fix the debug assert caused by r274161.

CFURLRequestGetRequestPriority can return -1 for requests with no priority set (e.g. some
requests from the media stack). We need to handle this case when transforming a
CFURLRequestPriority to a ResourceLoadPriority.

* platform/network/cf/ResourceRequestCFNet.h:
(WebCore::toResourceLoadPriority):

Canonical link: https://commits.webkit.org/235099@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@274180 268f45cc-cd09-0410-ab3c-d52691b4dbfc